# python_labs

./: .gitignore  README.md  pyproject.toml
data/lab08/: students_input.json  students_output.json
data/samples/: input.txt  people.xlsx  test.csv  test.json
src/: 02_sum_avg.py  04_minutes_to_hhmm.py  05_initials_and_len.py
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06_count_participation.py  07_restore_string.py
src/lab02/: README.MD  arrays.py  matrix.py  tuples.py
src/lab03/: README.md  text_stats.py
src/lab04/: README.md  io_txt_csv.py  output.csv  report.csv  text_report.py
src/lab05/: README.md  csv_to_json_example.json  csv_to_xlsx.xlsx  csv_xlsx.py  json_csv.py  json_to_csv_converted_file.csv
src/lab06/: README.md  cli_commands.py  cli_convertor.py
src/lab07/: README.MD
src/lab08/: README.MD  __init__.py  models.py  serialize.py
src/lab09/: README.md  __init__.py  group.py
src/lab10/: README.MD  __init__.py  linked_list.py  structures.py  test_structures.py
src/lib/: text.py
src/python_labs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_group.py  test_json_csv.py  test_text.py
